fix the scroll bar on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,12 @@ a:hover {
   color: #535bf2;
 }
 
+html, body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
+
 * {
   margin: 0;
   padding: 0;
